--- a/css/products.css
+++ b/css/products.css
@@ -173,7 +173,7 @@ body.hidden {
 
 .show-product img {
   width: 325px;
-  height: 100%;
+  height: 470px;
 }
 
 .right-block {
@@ -294,6 +294,7 @@ body.hidden {
   }
   .show-product img {
     width: 250px;
+    height: 361px;
   }
 
   #show-quantity {
@@ -338,6 +339,7 @@ body.hidden {
 
   .show-product img {
     width: 200px;
+    height: 289px;
   }
 
   .show-info {
@@ -416,6 +418,7 @@ body.hidden {
 
   .show-product img {
     width: 150px;
+    height: 216px;
   }
 
   .show-product {
@@ -434,6 +437,7 @@ body.hidden {
 
   .show-product img {
     width: 115px;
+    height: 166px;
   }
 
   .show-product {
